# todo

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
alembic/: alembic.ini  env.py
app/: main.py
app/database/: database.py
app/models/: models.py  schemas.py
app/models/schemas/: target_schema.py  task_schema.py  user_schema.py
app/routers/: auth.py  targets.py  tasks.py  users.py
app/services/: auth_service.py  target_service.py  targets.py  task_service.py  tasks.py  user_service.py  users.py
backend/: Dockerfile.backend  main.py
backend/database/: database.py
backend/models/: models.py
backend/models/schemas/: target_schema.py  task_schema.py  user_schema.py
backend/routers/: auth.py  targets.py  tasks.py  users.py
backend/services/: auth_service.py  target_service.py  task_service.py  user_service.py
frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  main.js
frontend/src/assets/: styles.css
frontend/src/auth/: AuthForm.vue  api.js  useAuthForm.js
frontend/src/components/: AddTarget.vue  Modal.vue  TargetForm.vue  TargetList.vue  TimeDisplay.vue
frontend/src/router/: authGuard.js  index.js
frontend/src/store/: auth.js
frontend/src/stores/: authStore.js
frontend/src/views/: Home.vue  Login.vue  Profile.vue  Register.vue  Signup.vue
tests/: conftest.py  validation_test.py
tests/api/: task_api.py
tests/service/: task_service.py
