[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "todo"
version = "0.1.0"

[tool.setuptools]
packages = ["api", "front"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*'crypt' is deprecated.*:DeprecationWarning",
    "ignore::DeprecationWarning:passlib.*"
]